option(VTP_USE_EXPERIMENTAL_BUILDING_GEOMETRY_GENERATOR "Use experimental code to generate procedural building 3d geometry" OFF)
if(VTP_USE_EXPERIMENTAL_BUILDING_GEOMETRY_GENERATOR)
	set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS VTP_USE_EXPERIMENTAL_BUILDING_GEOMETRY_GENERATOR)
endif(VTP_USE_EXPERIMENTAL_BUILDING_GEOMETRY_GENERATOR)
add_subdirectory(core)
add_subdirectory(vtosg)
